@@ -1,3 +1,14 @@
+2012-03-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	Support built-in GnuTLS for STARTTLS connection.
+	* smtp.el (smtp-use-gnutls): New cutomizable variable.
+	(smtp-open-gnutls-starttls-stream): New function.
+	(smtp-submit-package): Respect smtp-use-gnutls's value.
+	(smtp-send-buffer, smtp-send-buffer-by-myself): Do not
+	decide smtp-open-connection-function's value here.
+	(smtp-open-connection): Decide which open-connection-function is
+	called here.  Respect smtp-use-gnutls's value.
+
 2011-06-27  Kazuhiro Ito  <kazuhiro@chrono.local.domain>
 
 	* mel-q.el (quoted-printable-num-to-raw-byte-char): Enclose with
